--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/homeFragment"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="Home"
+        android:icon="@drawable/ic_world"
+        android:title="Global"
         app:cnb_backgroundColor="@color/white"
         app:cnb_iconColor="@color/black"
         app:cnb_textColor="@color/black" />
