--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -34,14 +34,24 @@
                 android:textColor="@color/white"
                 android:textSize="38sp" />
 
-            <ImageView
-                android:id="@+id/imgProfile"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="7dp"
-                android:src="@drawable/man" />
+                android:layout_gravity="center_horizontal">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/imgProfile"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    app:shapeAppearance="@style/round"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_launcher_background" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -72,7 +82,7 @@
                         android:id="@+id/etSignUpInEmail"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="Email" />
+                        android:hint="Email*" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -85,7 +95,7 @@
                         android:id="@+id/etUserName"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="Username" />
+                        android:hint="Username*" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -99,8 +109,9 @@
                         android:id="@+id/etSignUpPassword"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="Password" />
+                        android:hint="Password*" />
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="300dp"
@@ -113,6 +124,7 @@
                         android:layout_height="match_parent"
                         android:hint="place" />
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="300dp"
