--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-        <!-- TODO: Update blank fragment layout -->
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/home_rec"
             android:layout_width="match_parent"
@@ -21,16 +21,17 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/home_rec_vm" />
 
-        <ProgressBar
-            android:layout_width="match_parent"
-            android:id="@+id/HFrag_pBar"
-            android:layout_height="70dp"
-            android:indeterminateBehavior="cycle"
-            android:indeterminateTint="@color/black"
-            android:visibility="gone"
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/anim_preload2"
+            android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/preloader" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
