--- a/app/src/main/res/layout/my_chat_vm.xml
+++ b/app/src/main/res/layout/my_chat_vm.xml
@@ -35,8 +35,8 @@
             android:id="@+id/chat_rec_mymsg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="0dp"
             android:maxWidth="300dp"
             android:minWidth="200dp"
